# robot_cgmres

./: .travis.yml  LICENSE  README.md
ci/: install_pinocchio.sh
examples/iiwa14/: constraints_iiwa14.cpp  constraints_iiwa14.hpp  cost_function_iiwa14.cpp  cost_function_iiwa14.hpp
include/common/: linear_algebra.hpp  memory_manager.hpp
include/ocp/: time_varying_smooth_horizon.hpp
include/robot/: fixed_base_robot.hpp  floating_base_robot.hpp  point_contact.hpp
include/robotcgmres/common/: linear_algebra.hpp  memory_manager.hpp  time_varying_smooth_horizon.hpp
include/robotcgmres/constraints/: constraints_interface.hpp
include/robotcgmres/cost_function/: cost_function_interface.hpp  joint_space_cost.hpp
include/robotcgmres/ocp/: constraints_interface.hpp  cost_function_interface.hpp  fdgmres.hpp  multiple_shooting_ocp.hpp  newton_system_for_ocp.hpp  passive_joint_constraint.hpp  time_varying_smooth_horizon.hpp  zero_horizon_newton.hpp  zero_horizon_ocp.hpp
include/robotcgmres/robot/: passive_joints.hpp  point_contact.hpp  robot.hpp
include/robotcgmres/solver/: newton_system_for_ocp.hpp
include/robotcgmres/zero_horizon_ocp/: zero_horizon_newton.hpp  zero_horizon_ocp.hpp
src/common/: linear_algebra.cpp  memory_manager.cpp  time_varying_smooth_horizon.cpp
src/cost_function/: joint_space_cost.cpp
src/ocp/: passive_joint_constraint.cpp  passive_joints.cpp  time_varying_smooth_horizon.cpp  zero_horizon_newton.cpp  zero_horizon_ocp.cpp
src/robot/: fixed_base_robot.cpp  point_contact.cpp  robot.cpp
src/zero_horizon_ocp/: zero_horizon_newton.cpp  zero_horizon_ocp.cpp
unittest/: CMakeLists.txt
unittest/common/: CMakeLists.txt  linear_algebra_test.cpp  memory_manager_test.cpp  time_varying_smooth_horizon_test.cpp
unittest/ocp/: CMakeLists.txt  fdgmres_test.cpp  time_varying_smooth_horizon_test.cpp  zero_horizon_newton_system_test.cpp  zero_horizon_newton_test.cpp  zero_horizon_ocp_test.cpp
unittest/robot/: CMakeLists.txt  fixed_base_robot_test.cpp  point_contact_test.cpp
unittest/solver/: CMakeLists.txt  fdgmres_test.cpp
unittest/zero_horizon_ocp/: CMakeLists.txt  zero_horizon_newton_system_test.cpp  zero_horizon_newton_test.cpp  zero_horizon_ocp_test.cpp
