add_library(
    robot_model
    SHARED
    ${SRC_DIR}/robot/robot.cpp
    ${SRC_DIR}/robot/point_contact.cpp
    ${SRC_DIR}/cost_function/joint_space_cost.cpp
)
target_include_directories(
    robot_model
    PRIVATE
    ${INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    robot_model
    PRIVATE
    pthread
    ${Boost_LIBRARIES}
    urdfdom_model
)

add_executable(
    zero_horizon_ocp_test
    zero_horizon_ocp_test.cpp
    ${SRC_DIR}/zero_horizon_ocp/zero_horizon_ocp.cpp
    ${SRC_DIR}/common/memory_manager.cpp
    ${EXAMPLES_DIR}/iiwa14/cost_function_iiwa14.cpp
)
target_include_directories(
    zero_horizon_ocp_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${INCLUDE_DIR}
    ${EXAMPLES_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    zero_horizon_ocp_test
    PRIVATE
    GTest::GTest
    GTest::GMock
    pthread
    ${Boost_LIBRARIES}
    urdfdom_model
    robot_model
)
add_dependencies(
    zero_horizon_ocp_test
    googletest
)
add_test(
    NAME zero_horizon_ocp_test
    COMMAND $<TARGET_FILE:zero_horizon_ocp_test>
)

add_executable(
    zero_horizon_newton_system_test
    zero_horizon_newton_system_test.cpp
    ${SRC_DIR}/zero_horizon_ocp/zero_horizon_ocp.cpp
    ${SRC_DIR}/common/memory_manager.cpp
    ${SRC_DIR}/common/linear_algebra.cpp
    ${EXAMPLES_DIR}/iiwa14/cost_function_iiwa14.cpp
)
target_include_directories(
    zero_horizon_newton_system_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${INCLUDE_DIR}
    ${EXAMPLES_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    zero_horizon_newton_system_test
    PRIVATE
    GTest::GTest
    GTest::GMock
    pthread
    ${Boost_LIBRARIES}
    urdfdom_model
    robot_model
)
add_dependencies(
    zero_horizon_newton_system_test
    googletest
)
add_test(
    NAME zero_horizon_newton_system_test
    COMMAND $<TARGET_FILE:zero_horizon_newton_system_test>
)

add_executable(
    zero_horizon_newton_test
    zero_horizon_newton_test.cpp
    ${SRC_DIR}/zero_horizon_ocp/zero_horizon_newton.cpp
    ${SRC_DIR}/zero_horizon_ocp/zero_horizon_ocp.cpp
    ${SRC_DIR}/common/memory_manager.cpp
    ${SRC_DIR}/common/linear_algebra.cpp
    ${EXAMPLES_DIR}/iiwa14/cost_function_iiwa14.cpp
)
target_include_directories(
    zero_horizon_newton_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${INCLUDE_DIR}
    ${EXAMPLES_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    zero_horizon_newton_test
    PRIVATE
    GTest::GTest
    GTest::GMock
    pthread
    ${Boost_LIBRARIES}
    urdfdom_model
    robot_model
)
add_dependencies(
    zero_horizon_newton_test
    googletest
)
add_test(
    NAME zero_horizon_newton_test
    COMMAND $<TARGET_FILE:zero_horizon_newton_test>
)